test-cases/final-dump/resource_error.exp
Error detected during resource checking of module(s) resource_error
final-dump/resource_error.wybe:2:5: Call to resourceful proc println without ! resource marker
